--- a/ProofOfConcept/ProofOfConcept/NIBRSXML.csproj
+++ b/ProofOfConcept/ProofOfConcept/NIBRSXML.csproj
@@ -42,7 +42,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants\Namespace.cs" />
-    <Compile Include="Constants\NIBRSCodes.cs" />
     <Compile Include="NIBRSReport\OrganizationAugmentation.cs" />
     <Compile Include="NIBRSReport\OrganizationORIIdentification.cs" />
     <Compile Include="NIBRSReport\ReportDate.cs" />
@@ -50,6 +49,7 @@
     <Compile Include="NIBRSReport\ReportHeader.cs" />
     <Compile Include="NIBRSReport\ReportingAgency.cs" />
     <Compile Include="NIBRSReport\Submission.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility\NIBRSDescriptionAttributes.cs" />
