Added skeleton file structure of all elements of the NIBRS XML report

--- a/ProofOfConcept/ProofOfConcept/NIBRSXML.csproj
+++ b/ProofOfConcept/ProofOfConcept/NIBRSXML.csproj
@@ -42,13 +42,54 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants\Namespace.cs" />
-    <Compile Include="NIBRSReport\OrganizationAugmentation.cs" />
-    <Compile Include="NIBRSReport\OrganizationORIIdentification.cs" />
-    <Compile Include="NIBRSReport\ReportDate.cs" />
+    <Compile Include="NIBRSReport\Arrestee.cs" />
+    <Compile Include="NIBRSReport\ArrestSubjectAssociation.cs" />
+    <Compile Include="NIBRSReport\Arrest\ActivityIdentification.cs" />
+    <Compile Include="NIBRSReport\Arrest\ArrestCharge.cs" />
+    <Compile Include="NIBRSReport\EnforcementOfficial\EnforcementOfficial.cs" />
+    <Compile Include="NIBRSReport\EnforcementOfficial\EnforcementOfficialUnit.cs" />
+    <Compile Include="NIBRSReport\OffenseLocationAssociation.cs" />
+    <Compile Include="NIBRSReport\OffenseVictimAssociation.cs" />
+    <Compile Include="NIBRSReport\Subject.cs" />
+    <Compile Include="NIBRSReport\Misc\RoleOfPerson.cs" />
+    <Compile Include="NIBRSReport\Misc\ActivityDate.cs" />
+    <Compile Include="NIBRSReport\Misc\ActivityIdentification.cs" />
+    <Compile Include="NIBRSReport\Incident\Incident.cs" />
+    <Compile Include="NIBRSReport\Incident\cjisIncidentAugmentation.cs" />
+    <Compile Include="NIBRSReport\Incident\IncidentExceptionalClearanceDate.cs" />
+    <Compile Include="NIBRSReport\Incident\jxdmIncidentAugmentation.cs" />
+    <Compile Include="NIBRSReport\Item\Item.cs" />
+    <Compile Include="NIBRSReport\Item\ItemStatus.cs" />
+    <Compile Include="NIBRSReport\Item\ItemValue.cs" />
+    <Compile Include="NIBRSReport\Item\ItemValueAmount.cs" />
+    <Compile Include="NIBRSReport\Item\ItemValueDate.cs" />
+    <Compile Include="NIBRSReport\Location\Location.cs" />
+    <Compile Include="NIBRSReport\Location\LocationList.cs" />
+    <Compile Include="NIBRSReport\Offense\Offense.cs" />
+    <Compile Include="NIBRSReport\Offense\OffenseEntryPoint.cs" />
+    <Compile Include="NIBRSReport\Offense\OffenseFactor.cs" />
+    <Compile Include="NIBRSReport\Offense\OffenseForce.cs" />
+    <Compile Include="NIBRSReport\Offense\OffenseList.cs" />
+    <Compile Include="NIBRSReport\Person\IPersonAgeMeasure.cs" />
+    <Compile Include="NIBRSReport\Person\MeasureIntegerRange.cs" />
+    <Compile Include="NIBRSReport\Person\MeasureIntegerValue.cs" />
+    <Compile Include="NIBRSReport\Person\Person.cs" />
+    <Compile Include="NIBRSReport\Person\PersonAgeMeasure.cs" />
+    <Compile Include="NIBRSReport\Person\PersonAgeMeasureRange.cs" />
+    <Compile Include="NIBRSReport\Person\PersonAgeMeasureValue.cs" />
+    <Compile Include="NIBRSReport\Person\PersonAugmentation.cs" />
+    <Compile Include="NIBRSReport\Person\PersonInjury.cs" />
+    <Compile Include="NIBRSReport\Misc\OrganizationAugmentation.cs" />
+    <Compile Include="NIBRSReport\Misc\OrganizationORIIdentification.cs" />
+    <Compile Include="NIBRSReport\ReportHeader\ReportDate.cs" />
     <Compile Include="NIBRSReport\Report.cs" />
-    <Compile Include="NIBRSReport\ReportHeader.cs" />
-    <Compile Include="NIBRSReport\ReportingAgency.cs" />
+    <Compile Include="NIBRSReport\ReportHeader\ReportHeader.cs" />
+    <Compile Include="NIBRSReport\ReportHeader\ReportingAgency.cs" />
+    <Compile Include="NIBRSReport\SubjectVictimAssociation.cs" />
     <Compile Include="NIBRSReport\Submission.cs" />
+    <Compile Include="NIBRSReport\Substance\Substance.cs" />
+    <Compile Include="NIBRSReport\Substance\SubstanceQuantityMeasure.cs" />
+    <Compile Include="NIBRSReport\Victim.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
