--- a/ProofOfConcept/ProofOfConcept/NIBRSXML.csproj
+++ b/ProofOfConcept/ProofOfConcept/NIBRSXML.csproj
@@ -44,7 +44,7 @@
     <Compile Include="Constants\Namespace.cs" />
     <Compile Include="NIBRSReport\Arrestee.cs" />
     <Compile Include="NIBRSReport\ArrestSubjectAssociation.cs" />
-    <Compile Include="NIBRSReport\Arrest\ActivityIdentification.cs" />
+    <Compile Include="NIBRSReport\Arrest\Arrest.cs" />
     <Compile Include="NIBRSReport\Arrest\ArrestCharge.cs" />
     <Compile Include="NIBRSReport\EnforcementOfficial\EnforcementOfficial.cs" />
     <Compile Include="NIBRSReport\EnforcementOfficial\EnforcementOfficialUnit.cs" />
