Code changes to SubmissionBuilder.cs, ReportBuilder.cs, and ReportHeaderBuilder.cs perform the same operations as before. More extensions added. IncidentBuilder.cs and OffenseBuilder.cs are almost complete but should still produce output.

--- a/NibrsXmlGenerator/NibrsXmlGenerator/NIBRSXML.csproj
+++ b/NibrsXmlGenerator/NibrsXmlGenerator/NIBRSXML.csproj
@@ -44,6 +44,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Builder\LibrsExtensions.cs" />
+    <Compile Include="Builder\IncidentBuilder.cs" />
+    <Compile Include="Builder\OffenseBuilder.cs" />
     <Compile Include="Builder\ReportBuilder.cs" />
     <Compile Include="Builder\ReportHeaderBuilder.cs" />
     <Compile Include="Builder\SubmissionBuilder.cs" />
