--- a/NibrsXmlGenerator/NibrsXmlGenerator/NIBRSXML.csproj
+++ b/NibrsXmlGenerator/NibrsXmlGenerator/NIBRSXML.csproj
@@ -101,6 +101,24 @@
     <Compile Include="NibrsReport\Victim\Victim.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="NibrsSerializer\NibrsSerializer.cs" />
+    <Compile Include="Constants\UcrReportTypes.cs" />
+    <Compile Include="Ucr\DataMining\AsreMiner.cs" />
+    <Compile Include="Ucr\DataMining\ReportDataMiner.cs" />
+    <Compile Include="Ucr\DataMining\HateCrimeMiner.cs" />
+    <Compile Include="Ucr\DataMining\LeokaMiner.cs" />
+    <Compile Include="Ucr\DataMining\OffenseReturnMiner.cs" />
+    <Compile Include="Ucr\DataMining\ReturnASupplementMiner.cs" />
+    <Compile Include="Ucr\DataMining\SupplementaryHomicideMiner.cs" />
+    <Compile Include="Ucr\DataCollections\Asra.cs" />
+    <Compile Include="Ucr\DataCollections\Asre.cs" />
+    <Compile Include="Ucr\DataCollections\Data.cs" />
+    <Compile Include="Ucr\DataCollections\HateCrime.cs" />
+    <Compile Include="Ucr\DataCollections\Leoka.cs" />
+    <Compile Include="Ucr\DataCollections\OffenseReturn.cs" />
+    <Compile Include="Ucr\DataCollections\ReturnASupplement.cs" />
+    <Compile Include="Ucr\DataCollections\SupplementaryHomicide.cs" />
+    <Compile Include="Ucr\NibrsImport.cs" />
+    <Compile Include="Ucr\DataCollections\ReportData.cs" />
     <Compile Include="Utility\Extensions.cs" />
     <Compile Include="Utility\NibrsDescriptionAttributes.cs" />
   </ItemGroup>
@@ -112,8 +130,15 @@
       <Project>{d03ab9d9-20f3-469c-82b8-de61b646a978}</Project>
       <Name>LoadBusinessLayer</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\XmlValidator\XMLValidatorUtility.csproj">
+      <Project>{a9c4d411-f9ca-4ef7-a918-8551b0e95b7d}</Project>
+      <Name>XMLValidatorUtility</Name>
+    </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Ucr\QueryBuilder\" />
+    <Folder Include="Ucr\ReportBuilder\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
