Created Person and Victim objects and added them to the report in the report builder.

--- a/NibrsXmlGenerator/NibrsXmlGenerator/NIBRSXML.csproj
+++ b/NibrsXmlGenerator/NibrsXmlGenerator/NIBRSXML.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Builder\LibrsExtensions.cs" />
     <Compile Include="Builder\IncidentBuilder.cs" />
     <Compile Include="Builder\OffenseBuilder.cs" />
+    <Compile Include="Builder\PersonBuilder.cs" />
     <Compile Include="Builder\ReportBuilder.cs" />
     <Compile Include="Builder\ReportHeaderBuilder.cs" />
     <Compile Include="Builder\SubmissionBuilder.cs" />
