--- a/NibrsXmlGenerator/NibrsXmlGenerator/NIBRSXML.csproj
+++ b/NibrsXmlGenerator/NibrsXmlGenerator/NIBRSXML.csproj
@@ -114,7 +114,10 @@
     <Compile Include="NibrsSerializer\NibrsSerializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Constants\UcrReportTypes.cs" />
+    <Compile Include="Ucr\DataCollections\GeneralSummaryData.cs" />
+    <Compile Include="Ucr\DataCollections\HumanTrafficking.cs" />
     <Compile Include="Ucr\DataMining\AsreMiner.cs" />
+    <Compile Include="Ucr\DataMining\HumanTraffickingMiner.cs" />
     <Compile Include="Ucr\DataMining\ReportDataMiner.cs" />
     <Compile Include="Ucr\DataMining\HateCrimeMiner.cs" />
     <Compile Include="Ucr\DataMining\LeokaMiner.cs" />
@@ -210,6 +213,8 @@
     <Content Include="NibrsXsd\xml\xml-catalog.xml" />
     <Content Include="Ucr\Reports\Asre\asre.xml" />
     <Content Include="Ucr\Reports\Asre\asre.xsl" />
+    <Content Include="Ucr\Reports\Human Trafficking\humantrafficking.xml" />
+    <Content Include="Ucr\Reports\ReturnA\returna.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
