--- a/NibrsXmlGenerator/NibrsXmlGenerator/NIBRSXML.csproj
+++ b/NibrsXmlGenerator/NibrsXmlGenerator/NIBRSXML.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Ucr\DataCollections\GeneralSummaryCounts.cs" />
     <Compile Include="Ucr\DataCollections\GeneralSummaryData.cs" />
     <Compile Include="Ucr\DataCollections\HumanTrafficking.cs" />
+    <Compile Include="Ucr\DataCollections\ReturnA.cs" />
     <Compile Include="Ucr\DataMining\ArsonMiner.cs" />
     <Compile Include="Ucr\DataMining\AsreMiner.cs" />
     <Compile Include="Ucr\DataMining\HumanTraffickingMiner.cs" />
@@ -125,6 +126,7 @@
     <Compile Include="Ucr\DataMining\HateCrimeMiner.cs" />
     <Compile Include="Ucr\DataMining\LeokaMiner.cs" />
     <Compile Include="Ucr\DataMining\OffenseReturnMiner.cs" />
+    <Compile Include="Ucr\DataMining\ReturnAMiner.cs" />
     <Compile Include="Ucr\DataMining\ReturnASupplementMiner.cs" />
     <Compile Include="Ucr\DataMining\SupplementaryHomicideMiner.cs" />
     <Compile Include="Ucr\DataCollections\Asra.cs" />
