Preliminary column 4 implementation for Return A - homicides, rapes, robberies, assaults

--- a/NibrsXmlGenerator/NibrsXmlGenerator/NIBRSXML.csproj
+++ b/NibrsXmlGenerator/NibrsXmlGenerator/NIBRSXML.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Builder\SubmissionBuilder.cs" />
     <Compile Include="Constants\AgeGroup.cs" />
     <Compile Include="Constants\Namespace.cs" />
+    <Compile Include="Constants\NibrsCodeGroups.cs" />
     <Compile Include="Constants\NibrsCodes.cs" />
     <Compile Include="NibrsReport\Arrestee\Arrestee.cs" />
     <Compile Include="NibrsReport\Associations\ArrestSubjectAssociation.cs" />
